Closed Bug 463560 Opened 17 years ago Closed 17 years ago

Crash when selecting recipient from contacts sidebar [@ nsTreeSelection::GetSingle(int*)]

Categories

(MailNews Core :: Address Book, defect)

x86
Windows XP
defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED
Thunderbird 3.0b1

People

(Reporter: JoeS1, Assigned: standard8)

References

Details

(Keywords: crash, topcrash)

Crash Data

Attachments

(1 file)

I seldom use the contacts sidebar, so this could have been here for some time. The entries in AB are old. STR: 1. Compose an html mail (not checked for plaintext) 2. Use the contacts sidebar to select a recipient 3. Attempt to send the mail Results: Crash before sending: http://crash-stats.mozilla.com/report/index/b15bb468-ac7f-11dd-b082-001a4bd43ef6 http://crash-stats.mozilla.com/report/index/b90cb11c-ac77-11dd-81b4-001cc45a2ce4 This is with: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1b2pre) Gecko/20081105 Lightning/1.0pre Shredder/3.0b1pre ID:20081105032000 The exact same address when entered manually works fine.
One further step needed to reproduce. 1. Add the recipient from "contacts" 2. Close the contacts sidebar 3. Send mail No crash if contacts pane is left open.
Some more particulars: Crash occurs when using double-click on contact to apply Also with drag and drop to "to:" Does not crash when using "add to" button. Same results in safe mode, and with an older build: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1b1pre) Gecko/20080920112042 Lightning/1.0pre Shredder/3.0b1pre ID:20080920112042
Joe, unfortunately the crash reports don't provide any useful information and I can't reproduce. Can you try seeing if you can get stacks with more information on the Frames tab?
Let me try to be more clear on the steps: 1. Compose a message 2. open the contacts sidebar 3. double-click or d&d an addy to recipient bar 4. use the x to close the contacts pane (necessary for crash) 5. crash when attempting to send Just to see if it was profile related I used my a3 testing profile. Same crash there with better frames info: http://crash-stats.mozilla.com/report/index/926436e3-adcf-11dd-bd60-001a4bd43ed6?p=1
I see it now and that stack is definitely a lot better. Thanks for the info.
Severity: normal → critical
Component: Message Compose Window → Address Book
Flags: blocking-thunderbird3+
Keywords: crash
Product: Thunderbird → MailNews Core
QA Contact: message-compose → addressbook
Target Milestone: --- → Thunderbird 3.0b2
xref bug 456871 (In reply to comment #4) >... > http://crash-stats.mozilla.com/report/index/926436e3-adcf-11dd-bd60-001a4bd43ed6?p=1 nsTreeSelection::GetSingle layout/xul/base/src/tree/src/nsTreeSelection.cpp:305 nsTreeSelection::RangedSelect layout/xul/base/src/tree/src/nsTreeSelection.cpp:433 nsAbView::AddCard nsAbView.cpp:843 nsAbView::OnItemPropertyChanged nsAbView.cpp:1002 nsAbManager::NotifyItemPropertyChanged nsAbManager.cpp:315 nsAbMDBDirectory::NotifyItemChanged nsAbMDBDirectory.cpp:249 nsAbMDBDirectory::OnCardEntryChange nsAbMDBDirectory.cpp:864 nsAddrDatabase::NotifyCardEntryChange nsAddrDatabase.cpp:239 nsAddrDatabase::EditCard nsAddrDatabase.cpp:1968 nsAbMDBDirectory::ModifyCard nsAbMDBDirectory.cpp:719 nsMsgCompose::CheckAndPopulateRecipients nsMsgCompose.cpp:4667 NS_InvokeByIndex_P xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp:101 XPCWrappedNative::CallMethod js/src/xpconnect/src/xpcwrappednative.cpp:2405
Summary: Crash when selecting recipient from contacts sidebar → Crash when selecting recipient from contacts sidebar [@ nsTreeSelection::GetSingle]
b1pre and 3.0a3 topcrasher (top 5) ... so preferable this be fixed for b1 same issue as bug 456871
Keywords: topcrash
Taking, I should be able to work around this.
Assignee: nobody → bugzilla
This patch is a work around for bug 399227. I'm going to try and fix that bug as well, but I want to fix this here for beta 1 at least.
Attachment #350003 - Flags: superreview?(bienvenu)
Attachment #350003 - Flags: review?(bienvenu)
Attachment #350003 - Flags: superreview?(bienvenu)
Attachment #350003 - Flags: superreview+
Attachment #350003 - Flags: review?(bienvenu)
Attachment #350003 - Flags: review+
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: Thunderbird 3.0b2 → Thunderbird 3.0b1
Joe, please reopen if you still see this. does not appear in topcrash for builds after 2008112400.
Status: RESOLVED → VERIFIED
better sig for summary nsTreeSelection::GetSingle(int*)
Summary: Crash when selecting recipient from contacts sidebar [@ nsTreeSelection::GetSingle] → Crash when selecting recipient from contacts sidebar [@ nsTreeSelection::GetSingle(int*)]
Crash Signature: [@ nsTreeSelection::GetSingle(int*)]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: