Bug 463560 Crash when selecting recipient from contacts sidebar [@ nsTreeSelection::GetSingle] - work around core bug 399227. r/sr=bienvenu